@@ -3,6 +3,5 @@ Build-Profiles: <!stage1>
 Depends: kmod, linux-base (>= 4.1~), ${misc:Depends}
 Recommends: firmware-linux-free, ${kernel:Recommends}
 Suggests: linux-doc-@version@, debian-kernel-handbook
-Breaks: udev (<< 208-8~)
 Description: Linux @upstreamversion@ for @class@
  The Linux kernel @upstreamversion@ and modules for use on @longclass@.
