@@ -43,7 +43,7 @@ Build-Profiles: <!stage1 !pkg.linux.notools>
 Section: devel
 Architecture: alpha amd64 arm64 armel armhf hppa i386 mips mips64 mips64el mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}, ${python:Depends}
-Recommends: linux-base (>= 3.4~)
+Recommends: linux-base
 Provides: linux-tools-@version@
 Conflicts: linux-tools-@version@
 Replaces: linux-tools-@version@
@@ -92,7 +92,7 @@ Description: USB device sharing system over IP network
 Package: hyperv-daemons
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Architecture: i386 amd64 x32
-Depends: lsb-base (>= 3.2-14), ${shlibs:Depends}, ${misc:Depends}
+Depends: lsb-base, ${shlibs:Depends}, ${misc:Depends}
 Section: admin
 Description: Support daemons for Linux running on Hyper-V
  Suite of daemons for Linux guests running on Hyper-V, consisting of
