@@ -27,6 +27,7 @@ linux (4.6.1-1~exp1) UNRELEASED; urgency=medium
     - locallock: add local_lock_on()
     - kernel/printk: Don't try to print from IRQ/NMI region
     - mm: perform lru_add_drain_all() remotely
+  * debian/control: Drop obsolete versioned Depends and Breaks
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100
 
